crates/wsh-parser/tests/snapshots/integration__globals.snap
---
source: crates/wsh-parser/tests/tests.rs
expression: pretty_fmt(&module)
---
globals
---
0: global mut i32 i32.const 10


